# invoicex

server/: Cargo.toml
server/api/: Cargo.toml
server/api/src/: empty.rs  error.rs  lib.rs  session.rs
server/api/src/routes/: mod.rs
server/api/src/routes/v1/: mod.rs
server/api/src/routes/v1/auth/: mod.rs
server/api/src/routes/v1/auth/login/: login.rs  mod.rs  register.rs
server/api/src/routes/v1/auth/session/: mod.rs  remove.rs  user.rs
server/api/src/routes/v1/org/: create.rs  get.rs  list.rs  mod.rs  remove.rs
server/api/src/routes/v1/org/user/: add.rs  list.rs  mod.rs  remove.rs
server/api/src/routes/v1/org/user/scope/: list.rs  mod.rs  set.rs
server/api/src/routes/v1/product/: create.rs  get.rs  list.rs  mod.rs  remove.rs  update.rs
server/dal/: Cargo.toml
server/dal/migrations/: V1__initial.sql
server/dal/src/: hashing.rs  lib.rs
server/dal/src/entities/: mod.rs  org.rs  product.rs  user.rs
server/invoicex/: Cargo.toml
server/invoicex/src/: config.rs  main.rs
server/proc/: Cargo.toml
server/proc/src/: lib.rs  scope_list.rs  stringify.rs  variants.rs
server/proto/: Cargo.toml  build.rs
server/proto/proto/entities/: org.proto  product.proto  user.proto
server/proto/proto/payloads/auth/: login.proto
server/proto/proto/payloads/v1/auth/login/: login.proto  register.proto
server/proto/proto/payloads/v1/org/: create.proto  get.proto  list.proto  remove.proto
server/proto/proto/payloads/v1/org/user/: add.proto  list.proto  remove.proto
server/proto/proto/payloads/v1/org/user/scope/: list.proto  set.proto
server/proto/proto/payloads/v1/products/: create.proto  get.proto  list.proto  remove.proto  update.proto
server/proto/src/: lib.rs
web/: package.json
