[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
tracing-actix-web = "0.6"
tracing = "0.1.35"
thiserror = "1.0.31"
actix-multiresponse = "0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.dal]
path = "../dal"

[dependencies.proto]
path = "../proto"