[package]
name = "dal"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
thiserror = "1.0.31"
bcrypt = "0.13.0"
sha2 = "0.10.2"
base64 = "0.13.0"
time = "0.3.11"

[dependencies.proc]
path = "../proc"

[dependencies.refinery]
version = "0.8.4"
default-features = false
features = ["mysql"]

[dependencies.mysql]
version = "=22.0.0"
default-features = false
features = ["rustls-tls"]

[dependencies.mysql_common]
version = "0.29.0"
default-features = false
features = ["uuid"]