[package]
name = "invoicex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
toml = "0.5"
rand = "0.8"

[dependencies.dal]
path = "../dal"

[dependencies.api]
path = "../api"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.19"
features = ["macros", "fs", "rt-multi-thread"]